--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -669,7 +669,7 @@ FProxyToadlet.notEnoughMetaStrings=Nicht genug Meta-Zeichenfolgen
 FProxyToadlet.notFoundTitle=Nicht gefunden
 FProxyToadlet.openAsText=${link}Klicken Sie hier${/link} um die Datei als Fließtext zu öffnen (dies sollte nicht gefährlich, könnte allerdings durcheinander/unleserlich sein).
 FProxyToadlet.openAsThawIndex=${link}Hier klicken${/link} um die Datei mit dem Thaw Index Browser zu öffnen (lesen Sie die obige Warnung!).
-FProxyToadlet.openForce=${link}Click here${/link} to open the file as ${mime} without filtering (NOT RECOMMENDED: read the warning above!).
+FProxyToadlet.openForce=${link}Klicken Sie hier${/link} um die Datei ohne Filterung als ${mime} zu öffnen (NICHT EMPFOLEN! OBIGE WARNUNG BEACHTEN!)
 FProxyToadlet.openForceDisk=${link}Klicken Sie hier${/link} um Ihren Browser zu zwingen, die Datei auf einen Datenträger herunterzuladen.
 FProxyToadlet.openPossRSSForceDisk=${link}Klicken Sie hier${/link} um Ihren Browser zu zwingen, die Datei auf einen Datenträger herunterzuladen (${bold}dies könnte auch gefährlich sein${/bold} wenn Sie Firefox 2.0.0 benutzen, 2.0.1 sollte dies beheben).
 FProxyToadlet.openPossRSSAsPlainText=${link}Klicken Sie hier${/link} um die Datei als Fließtext zu öffnen (dies ${bold}kann gefährlich sein${/bold} wenn Sie Internet Explorer 7 oder Firefox 2 benutzen).
@@ -687,7 +687,7 @@ FProxyToadlet.pluginsTitle=Plugins
 FProxyToadlet.progressCheckingStore=Ihr Freenet-Knoten durchsucht Ihren lokalen Zwischenspeicher nach der angefragten Seite oder Datei. Falls sie dort nicht vorhanden ist, wird er versuchen, sie von Freenet herunter zu laden.
 FProxyToadlet.lastRefresh=Letzte Aktualisierung war vor {0}
 FProxyToadlet.progressDownloading=Ihr Knoten lädt diese Seite oder Datei gerade aus dem Freenet herunter. Dies könnte einige Sekunden aber auch Minuten dauern, abhängig davon, wie populär die Seite bzw. Datei ist - je häufiger auf Inhalte in Freenet zugegriffen wird, desto besser ist ihre Verfügbarkeit und die Download-Geschwindigkeit.
-FProxyToadlet.progressNotFinalized=The progress bar will jump around until we have downloaded enough blocks to determine the size of the file.
+FProxyToadlet.progressNotFinalized=Der Ladebalken wird eventuell herumspringen; Es wurden noch nicht genug Teile der Datei heruntergeladen, um ihre Größe zu kennen.
 FProxyToadlet.progressOptionZero=Sie können auf die angefragte Seite warten. Diese Status-Seite wird alle 2 Sekunden neu geladen, bis die Datei von Freenet heruntergeladen werden konnte oder Freenet die Suche aufgibt. Alternativ:
 FProxyToadlet.queue=Wartende/eingereihte Anfragen verwalten
 FProxyToadlet.queueTitle=Warteschlange
@@ -984,8 +984,8 @@ LongOption.parseError=Der angegebene Wert konnte nicht als eine, 64-bit lange, g
 MainJarUpdater.ConfirmMultiFileUpdater.title.wrapper-update-unix=Please update the wrapper files
 MainJarUpdater.ConfirmMultiFileUpdater.text.wrapper-update-unix=Freenet has downloaded an update to the Java Service Wrapper binaries. These are a set of files involved in running and updating Freenet. Updating these files may fix some important bugs especially on Linux/FreeBSD, particularly a bug that often causes Freenet to restart repeatedly after an update. We strongly recommend that you allow Freenet to update these files as soon as is convenient.
 MeaningfulNodeNameUserAlert.noNodeNick=Please set a name for your node so that your friends can identify your node, e.g. if you send them a message or a file. This will only be visible to your Friends who you manually connect to via the Add a Friend page, and possibly to their Friends. Your node's nickname will not be visible to strangers, that is, Freenet connections added automatically in the lower security levels.
-MeaningfulNodeNameUserAlert.noNodeNickTitle=Please set a name for your Freenet node.
-MeaningfulNodeNameUserAlert.noNodeNickShort=Please set a name for your Freenet node.
+MeaningfulNodeNameUserAlert.noNodeNickTitle=Bitte geben Sie ihrem Freenet-Knoten einen Namen.
+MeaningfulNodeNameUserAlert.noNodeNickShort=Bitte geben Sie ihrem Freenet-Knoten einen Namen.
 MP3Filter.bogusMP3NoFrames=Sieht nicht wie MP3 aus
 MP3Filter.bogusMP3NoFramesExplanation=Dies sieht nicht nach einer MP3-Datei aus. Sie könnte defekt sein oder jemand versucht, eine andere Dateiart als MP3-Datei zu tarnen, um Ihre Anonymität zu brechen.
 MP3Filter.freeBitrateNotSupported=MP3-Dateien mit "Freie Bitrate" werden vom Filter nicht unterstützt.
@@ -1028,11 +1028,11 @@ Node.assumeNATed=Annehmen, dass der Port nicht weitergeleitet ist.
 Node.assumeNATedLong=Soll der Knoten annehmen, dass der Port NATed (hinter einem NAT-Gerät (z.B. Router)) und nicht weitergeleitet ist und Handshakes (Verbindungsanfragen) immer aggressiv (alle 10-30 Sekunden) senden, ohne Rücksicht auf jegliche Hinweise auf das Gegenteil? (z.B.: Modem==nein, DSL-Router==ja)
 Node.autoChangeDatabaseEncryption=Automatisch node.db4o Verschlüsseln/Entschlüsseln beim Knoten-Neustart?
 Node.autoChangeDatabaseEncryptionLong=Automatisches Ver- oder Entschlüsseln der Datei "node.db4o.crypt" beim Neustart (oder bei der ersten Eingabe des Passwortes), wenn der Sicherheitslevel geändert wurde? Die Datei "node.db4o.crypt" ist verschlüsselt, wenn nicht der physikalische Sicherheitslevel (Beschlagnahme, Diebstahl unter http://127.0.0.1:8888/seclevels/) auf "NIEDRIG" gesetzt wurde. Das automatische Ver-/Entschlüsseln kostet etwas Zeit beim Starten. Wenn diese Option geändert wird, dann muss Freenet gestoppt werden und die Datei "node.db4o(.crypt)" gelöscht werden. Das löscht die Warteschlange für das Hoch/Runterladen. Man kann dann auch gleich die Datei "persistent-blob.tmp" im Verzeichnis "persistent-temp-nnnnn" löschen.
-Node.bandwidthLimitMustBePositiveOrMinusOne=Download bandwidth limit must be positive or -1.
+Node.bandwidthLimitMustBePositiveOrMinusOne=Das Downloadbandbreitenlimit muss Positiv oder -1 (unbegrenzt) sein.
 Node.bandwidthMinimum=The requested bandwidth limit of ${limit} bytes/second is too low. Bandwidth limits must be at least ${minimum} bytes/second because lower limits than this cannot properly connect to the network.
 Node.bindTo=Zu benutzende IP-Adresse(n)
 Node.bindToLong=Zu benutzende IP-Adresse(n)
-Node.bwlimitMustBePositive=Upload bandwidth limit must be positive.
+Node.bwlimitMustBePositive=Das Bandbreitenlimit fürs Hochladen muss positiv sein.
 Node.cachingFreenetStoreMaxSize=Maximum size of the in-memory write cache for each store (there are 9 such stores).
 Node.cachingFreenetStoreMaxSizeLong=Maximum size of the in-memory write cache for each store (there are 9 such stores). 0 for no in-memory cache (e.g. if you have a solid-state disk). Keys are of various sizes, so e.g. if the limit is between 2K and 32K it will only be used for storing small keys (SSKs and public keys).
 Node.cachingFreenetStorePeriod=Maximum time blocks will be kept in the in-memory datastore cache before being written to the store on disk (in milliseconds).
@@ -1075,7 +1075,7 @@ Node.enableULPRDataPropagationLong=Enable fast propagation of recently requested
 Node.errorApplyingConfig=Fehler beim Anwenden der neuen Konfiguration: ${error}
 Node.forceBigShrink=Nur bdbje-Index Speicher-Typ: Große Daten-Kompressionen sofort ausführen?
 Node.forceBigShrinkLong=Wenn aktiviert, werden große Speicher-Komprimierungen (über 10%) sofort ausgeführt (anstatt auf den nächsten Neustart des Knotens zu warten). Komprimierungen im laufenden Betrieb bewahren nicht die zuletzt benutzten Daten, daher ist dies nicht empfehlenswert; benutzen Sie dies nur, wenn Sie ein sofortiges Ergebnis haben müssen. (Dies betrifft nur den Datenspeicher mit dem bdbje-index Speicher-Type)
-Node.inBWLimit=Download bandwidth limit
+Node.inBWLimit=Download Bandbreitenbegrenzung
 Node.inBWLimitLong=Download bandwidth limit. Freenet will try not to exceed this, but it is not very accurate. If set to -1 the download bandwidth limit will be 4x the upload bandwidth limit. Without units this is in bytes/second, and SI and IEC units are accepted, so things like 10 KiB/s or 1.5 mbps (meaning 10 kibibytes/sec and 1.5 megabytes/sec respectively) are okay.
 Node.invalidStoreSize=Die Speicher-Größe muss mindestens 32MB betragen
 Node.invalidMemoryCacheSize=Memory cache size must be at least 0. We won't actually cache any keys unless it is at least ~ 1200 bytes, and we won't cache CHKs unless it is ~ 33KB.
@@ -1138,7 +1138,7 @@ Node.oneConnectionPerIP=Auf eine Verbindung pro Adresse beschränken? (Freunde) 
 Node.oneConnectionPerIPLong=Automatically drop friend connections when other friends have the same (external) IP address. DO NOT ENABLE THIS UNLESS YOU *REALLY* KNOW WHAT YOU ARE DOING!
 Node.opennetEnabled=Unsicheren Modus einschalten (automatisch mit nicht vertrauenswürdigen Knoten verbinden)?
 Node.opennetEnabledLong=Unsicheren Modus (alias Opennet) einschalten? Wenn dies aktiviert ist, wird der Knoten automatisch Referenzen mit anderen nicht vertrauenswürdigen Knoten (Fremden im Gegensatz zu Freunden) austauschen. Dies bedeutet aber, dass die Tatsache, dass Sie einen Knoten betreiben, nicht länger vertraulich ist und viele Attacken viel einfacher sind. Wenn Sie genügend Leute kennen, die Freenet benutzen, sollten Sie bei vertrauenswürdigen (Freunde) Verbindungen mit ihnen bleiben und dies ausschalten.
-Node.outBWLimit=Upload bandwidth limit
+Node.outBWLimit=Upload Bandbreitenbegrenzung
 Node.outBWLimitLong=Hard upload bandwidth limit. Freenet should almost never exceed this. Normally you should set this to no more than half the your internet connection's upload bandwidth, which is usually much less than your download bandwidth. Without units this is in bytes/second, and SI and IEC units are accepted, so things like 10 KiB/s or 1.5 mbps (meaning 10 kibibytes/sec and 1.5 megabytes/sec respectively) are okay.
 Node.paddDataPackets=Von diesem Freenet-Knoten gesendete Daten-Pakete mit zufälligen Daten von zufälliger Länge auffüllen? (VOR DEM AUSSCHALTEN WARNUNG LESEN!)
 Node.paddDataPacketsLong=Von diesem Freenet-Knoten gesendete Daten-Pakete mit zufälligen Daten von zufälliger Länge auffüllen? Aus Sicherheitsgründen ist es schlecht, dies auf einem einzelnen Knoten auszuschalten. Würde dies von vielen Knoten des Netzwerks gemacht, dann würden wir sehr anfällig für einen passiven Angreifer werden. Andererseits würde das Ausschalten dieser Option die Leistung erhöhen, insbesondere der Anteil der Nutzlast würde steigen. Seien Sie gewarnt!
@@ -1188,9 +1188,9 @@ Node.throttleLocalTraffic=Lokalen Datenverkehr drosseln?
 Node.throttleLocalTrafficLong=Auch lokalen Datenverkehr drosseln? Wenn diese Einstellung aktiviert ist, wird auch LAN und localhost Datenverkehr bei der Beachtung des Bandbreitenlimits mit einberechnet.
 Node.useSlashdotCache=Alle Anfragen für 30 Minuten zwischenspeichern?
 Node.useSlashdotCacheLong=Antworten auf Anfragen mit hohem HTL-Zähler sind nicht geeignet, um im Freenet-Datenspeicher abgelegt zu werden. Falls diese Option eingeschaltet ist, wird Ihr Freenet-Knoten diese im Kurzzeit-Cache, auch Slashdot-Cache genannt speichern - der Cache für aktuelle Anfragen. Falls diese Option ausgeschaltet ist, werden nur Antworten für ULPR-Anfragen (Ultra-Lightweight Persistent Requests, verzögerte Antworten auf Anfragen) in diesem Cache gespeichert werden. Diese Option wird standardmäßig eingeschaltet, sofern nicht der Netzwerk-Sicherheitslevel auf MAXIMUM gestellt wurde, weil dies für die Geschwindigkeit wichtig ist, wenn ein Schlüssel plötzlich von vielen Knoten angefordert wird. Andererseits hat dies aber Auswirkungen auf Ihre Sicherheit, insofern, das wenn ein Angreifer innerhalb von 30min dicht an sein Ziel herankommt (obwohl in den meisten Fällen unwahrscheinlich), könnte dieser Mechanismus ihm helfen, seine Vermutungen zu bestätigen.
-Node.usingGCJTitle=Running Freenet under GCJ is not recommended
+Node.usingGCJTitle=Es wird nicht empfohlen Freenet unter GCJ laufen zu lassen
 Node.usingGCJ=You are running Freenet under GCJ (a free Java compiler). This is buggy and likely to cause problems. We recommend switching to OpenJDK (which is also free, and less likely to have odd bugs).
-Node.usingOracleTitle=You are running Freenet under the official Oracle Java Virtual Machine. Please switch to OpenJDK if possible.
+Node.usingOracleTitle=Freenet läuft auf der offiziellen Oracle Java Virtual Machine. Bitte wechseln Sie, wenn möglich, zu OpenJDK.
 Node.usingOracle=You are running Freenet under the official Oracle Java Virtual Machine. The official JVM has deliberately crippled encryption code because of export restrictions, so we have to use the built-in Freenet encryption code, which may be slower. You should switch to OpenJDK if possible (e.g. install it through your package manager).
 Node.withAnnouncement=Dem Knoten erlauben, sich mit Hilfe von Seednodes automatisch zu verbinden? (Ändern Sie dies bitte nicht, außer, wenn Sie genau wissen, was Sie tun)
 Node.withAnnouncementLong=Dem Knoten erlauben, sich mit Hilfe von Seednodes (Start-Knoten) automatisch zu verbinden? Obwohl dies die Standard-Einstellung darstellt, ist es prinzip-bedingt unsicher. Um in das Opennet zu gelangen, nimmt Freenet Kontakt auf zu öffentlichen Knoten. Diese Knoten sind in einer kleinen Datei enthalten, die mit Freenet zusammen installiert wird (seednodes.fref). Das Opennet ist die Freenet-Verbindung, die automatisch gewählt wird, wenn der Sicherheitslevel für das Netzwerk auf NIEDRIG oder NORMAL eingestellt wird. Offensichtlich ist dies in gewisser Weise unsicher, für das Opennet wird man das aber so machen müssen. Wenn Ihr Freenet-Knoten eine zeitlang abgeschaltet war, insbesondere wenn er sich hinter einem Router befindet und/oder seine IP-Adresse hat sich geändert, dann muß er erstmal in das Freenet hineinfinden. Wenn Sie eine höhere Sicherheitsstufe möchten, sollten Sie sich nur über Freunde zu Freenet verbinden und den Netzwerk-Sicherheitslevel auf "HOCH" stellen.
@@ -1471,7 +1471,7 @@ PproxyToadlet.pluginGroup.file-transfer=Datei-Transfer
 PproxyToadlet.pluginGroup.index=Indexieren
 PproxyToadlet.pluginGroup.technical=Technisches
 PproxyToadlet.pluginGroupTitle=${pluginGroup} Plugins
-PproxyToadlet.pluginVersion=version
+PproxyToadlet.pluginVersion=Version
 PproxyToadlet.pluginNotFoundReload=Das angegebene Plugin konnte nicht gefunden werden, um es neu zu laden.
 PproxyToadlet.pluginNotFoundReloadTitle=Plugin nicht gefunden (neu laden)
 PproxyToadlet.pluginNotFoundUpdatingTitle=Neuste Version des Plugins nicht gefunden!
@@ -1622,7 +1622,7 @@ QueueToadlet.persistenceBrokenTitle=Die Datenbank der Download- und Upload-Warte
 QueueToadlet.persistenceBrokenShortAlert=Die Download- und Upload-Warteschlange ist defekt aufgrund einer Datenbank-Beschädigung. Klicken Sie, um eine Erläuterung zu erhalten, wie dies behoben werden kann.
 QueueToadlet.persistenceBroken=Freenet failed to load the database in which it stores persistent downloads and uploads. This is usually caused by data corruption on disk due to things like power failure. The problem is in the ${TEMPDIR} directory and ${DBFILE} file. Please shut down Freenet, then either restore them from backup or delete them. Also check whether you are out of disk space. This message sometimes happens harmlessly while Freenet is shutting down.
 QueueToadlet.pleaseEnableFCP=Sie müssen den FCP-Server einschalten, um diese Seite aufzurufen
-QueueToadlet.panicButton=PANIC!
+QueueToadlet.panicButton=PANIK!
 QueueToadlet.priority0=Notfall
 QueueToadlet.priority1=sehr hoch
 QueueToadlet.priority2=hoch
@@ -1746,7 +1746,7 @@ OperatingSystemName.Linux=Linux
 OperatingSystemName.MacOS=MacOS
 OperatingSystemName.FreeBSD=FreeBSD
 OperatingSystemName.GenericUnix=UNIX
-OperatingSystemName.Unknown=your operating system
+OperatingSystemName.Unknown=Ihr Betriebssystem
 SecurityLevels.userAlertShortText=Sicherheitslevel:: Netzwerk: ${network}, Freunde: ${friends}, Physikalisch: ${physical}
 SecurityLevels.userAlertNetworkThreatLevel=Schutz gegen einen Fremden, der Sie über das Internet angreift: ${level}
 SecurityLevels.userAlertPhysicalThreatLevel=Schutz für den Fall, dass ihr Computer beschlagnahmt oder gestohlen wird:: ${level}
@@ -1766,7 +1766,7 @@ SecurityLevels.cantWriteNewMasterKeysFileTitle=Die neue Datei master.keys kann n
 SecurityLevels.cantWriteNewMasterKeysFile=Etwas ging schief - vielleicht kein Festplattenplatz übrig oder ein Festplatten-Problem. Sehen Sie in der folgenden Fehlermeldung nach Details:
 SecurityLevels.oldPasswordLabel=Altes Passwort:
 SecurityLevels.newPasswordLabel=Neues Passwort:
-SecurityLevels.setPasswordTitle=Set a new master password
+SecurityLevels.setPasswordTitle=Ein neues Master-Passwort setzen
 SecurityLevels.changePasswordButton=Passwort ändern
 SecurityLevels.changePasswordTitle=Masterpasswort ändern
 SecurityLevels.backToSecurityLevels=Passwort nicht setzen oder ändern und zurück zur Sicherheitslevel-Seite gehen.
