Rename errant localization keys
Property files can look like "key=value", "key = value", "key:value", or
"key value". Fred only recognizes the first, so it can find unescaped
spaces in the middle of a key, whereas conformant parsers find
"key value=more value". Because of this, translators on Transifex are
presented with part of what Fred considerers the key as the start of the
value, and translating it changes the key Fred finds to something the
localization layer isn't queried for.

--- a/src/freenet/l10n/freenet.l10n.fr.properties
+++ b/src/freenet/l10n/freenet.l10n.fr.properties
@@ -222,21 +222,21 @@ ConnectivityToadlet.status.MAYBE_NATED=Peut-être derrière un NAT
 ConnectivityToadlet.status.DEFINITELY_NATED=Derrière un NAT
 ConnectivityToadlet.status.DONT_KNOW=Statut inconnu
 ConnectionsToadlet.nodeStatus.CONNECTED=CONNECTÉ
-ConnectionsToadlet.nodeStatus.BACKED OFF=SURCHARGE
-ConnectionsToadlet.nodeStatus.TOO NEW=TROP RECENT
-ConnectionsToadlet.nodeStatus.TOO NEW=TROP RECENT
+ConnectionsToadlet.nodeStatus.BACKED_OFF=SURCHARGE
+-ConnectionsToadlet.nodeStatus.NO_LOAD_STATS=PAS DE STATISTIQUE DE CHARGE
+ConnectionsToadlet.nodeStatus.TOO_NEW=TROP RECENT
 ConnectionsToadlet.nodeStatus.DISCONNECTED=DÉCONNECTÉ
-ConnectionsToadlet.nodeStatus.NEVER CONNECTED=JAMAIS CONNECTÉ
+ConnectionsToadlet.nodeStatus.NEVER_CONNECTED=JAMAIS CONNECTÉ
 ConnectionsToadlet.nodeStatus.DISABLED=DESACTIVE
-ConnectionsToadlet.nodeStatus.LISTEN ONLY=ECOUTE SEULEMENT
+ConnectionsToadlet.nodeStatus.LISTEN_ONLY=ECOUTE SEULEMENT
 ConnectionsToadlet.nodeStatus.LISTENING=ECOUTE
 ConnectionsToadlet.nodeStatus.BURSTING=DIALOGUE RAPIDE
-ConnectionsToadlet.nodeStatus.CLOCK PROBLEM=PROBLEME D'HORLOGE
-ConnectionsToadlet.nodeStatus.CONNECTION ERROR=ERREUR DE CONNEXION
+ConnectionsToadlet.nodeStatus.CLOCK_PROBLEM=PROBLEME D'HORLOGE
+ConnectionsToadlet.nodeStatus.CONNECTION_ERROR=ERREUR DE CONNEXION
 ConnectionsToadlet.nodeStatus.DISCONNECTING=DECONNEXION EN COURS
-ConnectionsToadlet.nodeStatus.UNKNOWN STATUS=ETAT INCONNU
+ConnectionsToadlet.nodeStatus.UNKNOWN_STATUS=ETAT INCONNU
 ConnectionsToadlet.nodeStatus.BUSY=OCCUPE
-ConnectionsToadlet.nodeStatus.ROUTING DISABLED=PAS DE ROUTAGE
+ConnectionsToadlet.nodeStatus.ROUTING_DISABLED=PAS DE ROUTAGE
 ContentDataFilter.unknownCharset=La page que vous essayez d'afficher utilise un jeu de caractère inconnu. Cela signifie que le noeud ne pourra pas la filtrer, et qu'elle pourait compromettre votre anonymat.
 ContentDataFilter.unknownCharsetTitle=Jeu de caractères inconnu !
 ContentDataFilter.warningUnknownCharsetTitle=Attention : jeu de caractères inconnu (${charset})
