--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -224,22 +224,22 @@ ConnectivityToadlet.status.MAYBE_NATED=Maybe behind NAT
 ConnectivityToadlet.status.DEFINITELY_NATED=Behind NAT
 ConnectivityToadlet.status.DONT_KNOW=Status unknown
 ConnectionsToadlet.nodeStatus.CONNECTED=CONNECTED
-ConnectionsToadlet.nodeStatus.BACKED OFF=BACKED OFF
-ConnectionsToadlet.nodeStatus.NO LOAD STATS=NO LOAD STATS
-ConnectionsToadlet.nodeStatus.TOO NEW=TOO NEW
-ConnectionsToadlet.nodeStatus.TOO OLD=TOO OLD
+ConnectionsToadlet.nodeStatus.BACKED_OFF=BACKED OFF
+ConnectionsToadlet.nodeStatus.NO_LOAD_STATS=NO LOAD STATS
+ConnectionsToadlet.nodeStatus.TOO_NEW=TOO NEW
+ConnectionsToadlet.nodeStatus.TOO_OLD=TOO OLD
 ConnectionsToadlet.nodeStatus.DISCONNECTED=DISCONNECTED
-ConnectionsToadlet.nodeStatus.NEVER CONNECTED=NEVER CONNECTED
+ConnectionsToadlet.nodeStatus.NEVER_CONNECTED=NEVER CONNECTED
 ConnectionsToadlet.nodeStatus.DISABLED=DISABLED
-ConnectionsToadlet.nodeStatus.LISTEN ONLY=LISTEN ONLY
+ConnectionsToadlet.nodeStatus.LISTEN_ONLY=LISTEN ONLY
 ConnectionsToadlet.nodeStatus.LISTENING=LISTENING
 ConnectionsToadlet.nodeStatus.BURSTING=BURSTING
-ConnectionsToadlet.nodeStatus.CLOCK PROBLEM=CLOCK PROBLEM
-ConnectionsToadlet.nodeStatus.CONNECTION ERROR=CONNECTION ERROR
+ConnectionsToadlet.nodeStatus.CLOCK_PROBLEM=CLOCK PROBLEM
+ConnectionsToadlet.nodeStatus.CONNECTION_ERROR=CONNECTION ERROR
 ConnectionsToadlet.nodeStatus.DISCONNECTING=DISCONNECTING
-ConnectionsToadlet.nodeStatus.UNKNOWN STATUS=UNKNOWN STATUS
+ConnectionsToadlet.nodeStatus.UNKNOWN_STATUS=UNKNOWN STATUS
 ConnectionsToadlet.nodeStatus.BUSY=BUSY
-ConnectionsToadlet.nodeStatus.ROUTING DISABLED=NOT ROUTING TRAFFIC
+ConnectionsToadlet.nodeStatus.ROUTING_DISABLED=NOT ROUTING TRAFFIC
 ContentDataFilter.unknownCharset=The page you are about to display has an unknown character set. This means that we are not able to filter the page, and it may compromise your anonymity.
 ContentDataFilter.unknownCharsetTitle=Unknown character set!
 ContentDataFilter.warningUnknownCharsetTitle=Warning: Unknown character set (${charset})
