--- a/src/freenet/l10n/freenet.l10n.it.properties
+++ b/src/freenet/l10n/freenet.l10n.it.properties
@@ -222,15 +222,21 @@ ConnectivityToadlet.status.MAYBE_NATED=Può darsi che si sia dietro un NAT
 ConnectivityToadlet.status.DEFINITELY_NATED=Dietro un NAT
 ConnectivityToadlet.status.DONT_KNOW=Stato sconosciuto
 ConnectionsToadlet.nodeStatus.CONNECTED=CONNESSO
-ConnectionsToadlet.nodeStatus.BACKED OFF=RESPINTO
+ConnectionsToadlet.nodeStatus.BACKED_OFF=RESPINTO
+ConnectionsToadlet.nodeStatus.NO_LOAD_STATS=NESSUNO STATO DI CARICAMENTO
+ConnectionsToadlet.nodeStatus.TOO_NEW=TROPPO RECENTE
 ConnectionsToadlet.nodeStatus.DISCONNECTED=DISCONNESSO
-ConnectionsToadlet.nodeStatus.NEVER CONNECTED=MAI CONNESSO
+ConnectionsToadlet.nodeStatus.NEVER_CONNECTED=MAI CONNESSO
 ConnectionsToadlet.nodeStatus.DISABLED=DISABILITATO
+ConnectionsToadlet.nodeStatus.LISTEN_ONLY=SOLO ASCOLTO
 ConnectionsToadlet.nodeStatus.LISTENING=IN ASCOLTO
 ConnectionsToadlet.nodeStatus.BURSTING=SCOPPIO
+ConnectionsToadlet.nodeStatus.CLOCK_PROBLEM=CATTIVA SINCRONIZZAZIONE
+ConnectionsToadlet.nodeStatus.CONNECTION_ERROR=ERRORE DI CONNESSIONE
 ConnectionsToadlet.nodeStatus.DISCONNECTING=DISCONNESSIONE IN CORSO
-ConnectionsToadlet.nodeStatus.UNKNOWN STATUS=STATUS NON DETERMINATO
+ConnectionsToadlet.nodeStatus.UNKNOWN_STATUS=STATUS NON DETERMINATO
 ConnectionsToadlet.nodeStatus.BUSY=OCCUPATO
+ConnectionsToadlet.nodeStatus.ROUTING_DISABLED=NON INSTRADA TRAFFICO
 ContentDataFilter.unknownCharset=La pagina che sta per essere visualizzata utilizza un formato di caratteri (charset) di tipo sconosciuto. Ciò rende impossibile filtrare la pagina, il che potrebbe a sua volta compromettere l'anonimato dell'utente.
 ContentDataFilter.unknownCharsetTitle=Character set sconosciuto!
 ContentDataFilter.warningUnknownCharsetTitle=Attenzione: charset sconosciuto (${charset})
